# resnet-unlearning

./: .gitignore  ConvNext_learning.ipynb  README.md  pyproject.toml  resnet18_fcr_unlearning.ipynb  resnet18_learning.ipynb  resnet18_learning_v2.ipynb  resnet18_salun_unlearning.ipynb  resnet18_tbar_unlearning.ipynb  resnet50_learning.ipynb
optuna_params/: resnet18_salun_fixed_known_ca69.0_asr1.9.json  resnet18_salun_fixed_unknown_ca69.0_asr3.2.json  resnet18_salun_fixed_unknown_ca69.4_asr3.0.json  resnet18_salun_random_unknown_ca71.1_asr2.9.json  resnet18md-batch256-clean.json  resnet18md-batch512-clean.json  resnet18md-batch512-poison_fixed.json
saved_models/: convnextmd_cifar100_acc678.pth  convnextmd_cifar100_poison_fixed_acc699.pth  convnextmd_cifar100_poison_random_acc68.pth  resnet50md_cifar100_acc753.pth  resnet50md_cifar100_poison_fixed_acc739.pth  resnet50md_cifar100_poison_random_acc76.pth
