[project]
name = "resnet-unlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "ruff",
    "torch",
    "torchvision",
    "ipykernel",
    "tqdm>=4.67.3",
    "scikit-learn>=1.8.0",
    "optuna>=4.8.0",
    "lightning>=2.6.1",
    "litlogger>=2026.4.16",
    "optuna-integration>=4.8.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.5",
]


[project.optional-dependencies]
gpu = [
    "torch",
    "torchvision",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", extra = "gpu" },
]
torchvision = [
  { index = "pytorch-cu128", extra = "gpu" },
]
